--- a/vue/package.json
+++ b/vue/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.93.2",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
   }
